tests/output/self_hosted/double_plus_prefix_error.txt
tests/double_plus_prefix_error.oomph:3: error: should be an expression

    print(++thing)
          ^

